<resources>
    <string name="app_name">Elastic Sensor Dump</string>
    <string name="buttonStart">Start Collecting</string>
    <string name="buttonStop">Stop Collecting</string>
    <string name="Collection_Interval">Collection Interval</string>
    <string name="milliseconds">ms</string>
    <string name="Sensor_Readings">Readings:</string>
    <string name="Errors">Errors: </string>
    <string name="settings">Settings</string>
    <string name="_0">0</string>
    <string name="databaseText">Database:</string>
    <string name="audio">Audio:</string>
    <string name="indexCountTv">Uploads:</string>
    <string name="audioRadioBtn">AUDIO</string>
    <string name="locationCount">Location:</string>
    <string name="gps">GPS</string>
    <string name="EsPasswordPreferences">Elastic password. </string>
    <string name="EsUsernamePreferences">Elastic user name. </string>
    <string name="Es_ssl_protection">Select for SSL connections.</string>
    <string name="qrCodeTitle">QR Code</string>
    <string name="qrCodeSummary">Import host address.</string>
    <string name="ServiceManagerIntentAddressName"> dungeons.ca.esdKotlin.ServiceBroadcastReceiver </string>


</resources>