<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundGreyTint"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    tools:context="dungeons.ca.esdkotlin.MainActivity"
    tools:ignore="Overdraw">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <ToggleButton
            android:id="@+id/toggleStart"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/main_button_shape_off"
            android:gravity="center"
            android:text="@string/buttonStart"
            android:textColorLink="@color/Light_blue_transparent"
            android:textOff="@string/buttonStart"
            android:textOn="@string/buttonStop"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TickText"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:gravity="center"
            android:selectAllOnFocus="false"
            android:text="@string/Collection_Interval" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/SeekBar"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:max="100"
            android:progress="25"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/backGroundGreyTint"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_action_navigation_more_vert" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:alpha=".1"
            android:background="@drawable/elastic_logo"
            android:clickable="false"
            android:contentDescription="@string/app_name"
            android:longClickable="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/gpsCheckBox"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_check_box"
                android:text="@string/gps"
                android:textColorLink="@android:color/holo_blue_light" />

            <Space
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/audioCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/custom_check_box"
                android:text="@string/audioRadioBtn" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="305dp"
            android:layout_gravity="bottom"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:fontFamily="monospace"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/Sensor_Readings"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/sensor_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textDirection="ltr"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"

                    android:fontFamily="monospace"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/locationCount"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/gps_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textDirection="ltr"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="monospace"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/audio"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/audioCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textDirection="ltr"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:fontFamily="monospace"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/databaseText"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/databaseCount"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textDirection="ltr"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:fontFamily="monospace"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/indexCountTv"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/documents_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textDirection="ltr"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:fontFamily="monospace"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/Errors"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/errors_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="?attr/editTextColor"
                    android:textDirection="ltr"
                    android:textSize="22sp" />

            </TableRow>

        </TableLayout>

    </FrameLayout>


</RelativeLayout>